--- a/index.html
+++ b/index.html
@@ -5,6 +5,201 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+
+  <body>
+    <header class="header text-black">
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li
+            class="header__links-list-item header__links-list-item_no-bullit header__link_active"
+          >
+            <a class="header__link" href="#0">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#lots">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#about">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header-logo">
+        <img src="./images/logo-black.svg" alt="Оно тебе надо" />
+      </a>
+      <address class="address">
+        <a class="adress__link" href="tel:+9995555555">+9 999 555 5555</a><br />
+        <a class="adress__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a
+        ><br />
+        <p class="header__address">
+          наб. Принсенграхт 263-265,<br />
+          Амстердам
+        </p>
+      </address>
+    </header>
+
+    <main>
+      <section class="cover text-white">
+        <div class="overlay"></div>
+        <h1 class="cover__title text-uppercase">
+          <span class="aligned-text"
+            >о<span class="letter-spacing-extended">но</span></span
+          >
+          <span class="aligned-text aligned-text_center"
+            >те<span class="letter-spacing-extended">бе</span></span
+          >
+          <span class="aligned-text aligned-text_right"
+            ><span class="letter-spacing-extended">н</span>ад<span
+              class="no-letter-spacing"
+              >о</span
+            ></span
+          >
+        </h1>
+        <div class="cover__description">
+          <p class="cover__description-text text-uppercase">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button class="bet-button text-uppercase">Сделать ставку</button>
+        </div>
+      </section>
+
+      <section id="lots" class="lots">
+        <h2 class="lots__heading text-uppercase">Лоты</h2>
+        <ul class="lots__card-list text-white">
+          <li class="lots__card-list-item">
+            <a href="#0" class="card-link">
+              <article class="card card_type_film">
+                <h3 class="card__title text-uppercase">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+                <div class="overlay"></div>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a href="#0" class="card-link">
+              <article class="card card_type_book">
+                <h3 class="card__title text-uppercase">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+                <div class="overlay"></div>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a href="#0" class="card-link">
+              <article class="card card_type_picture">
+                <h3 class="card__title text-uppercase">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков… Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+                <div class="overlay"></div>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a class="lots__look-more-link" href="#0">посмотреть больше</a>
+      </section>
+
+      <section id="about" class="about">
+        <div class="about-logo">
+          <img
+            class="about__logo-image"
+            src="images/logo-white.svg"
+            alt="Оно тебе надо"
+          />
+        </div>
+        <div class="about__column">
+          <h2 class="about__title text-uppercase">об аукционе</h2>
+          <div class="about__text">
+            <p>
+              Здесь вы не встретите очередное пафосное собрание невероятно
+              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
+              на один аукцион. Потому что кому нужен дневник девочки-подростка
+              или картина, которую может нарисовать даже ребёнок? Кому нужны все
+              эти странные вещи, созданные любителями?
+            </p>
+            <p>
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+              время. В пух и прах растерзанные критиками. Непринятые и
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих
+              лотов невозможно представить современную культуру. Когда в эти
+              вещи не верил никто, продолжали верить их создатели. И сейчас эти
+              лоты стали культовыми.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <address class="footer-address">
+        <a class="adress__link" href="tel:+9995555555">+9 999 555 5555</a><br />
+        <a class="adress__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a
+        ><br />
+        <p class="header__address">
+          наб. Принсенграхт 263-265,<br />
+          Амстердам
+        </p>
+      </address>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link footer__menu-link_active" href="#0"
+              >главная</a
+            >
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#lots">посмотреть лоты</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#about">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="youtube.com">
+            <img class="footer__social-icon" src="./images/yt.svg" alt="ютуб" />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="vk.com">
+            <img class="footer__social-icon" src="./images/vk.svg" alt="вк" />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="pinterest.com">
+            <img
+              class="footer__social-icon"
+              src="./images/pinterest.svg"
+              alt="пинтерест"
+            />
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
