--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
@@ -31,13 +31,9 @@
         <img src="./images/logo-black.svg" alt="Оно тебе надо" />
       </a>
       <address class="address">
-        <a class="adress__link" href="tel:+9995555555">+9 999 555 5555</a><br />
-        <a class="adress__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a
-        ><br />
-        <p class="header__address">
-          наб. Принсенграхт 263-265,<br />
-          Амстердам
-        </p>
+        <a class="adress__link" href="tel:+9995555555">+9 999 555 5555</a>
+        <a class="adress__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="header__address">наб. Принсенграхт 263-265, Амстердам</p>
       </address>
     </header>
 
@@ -62,7 +58,9 @@
           <p class="cover__description-text text-uppercase">
             Аукцион вещей, в которые никто не верил
           </p>
-          <button class="bet-button text-uppercase">Сделать ставку</button>
+          <button type="button" class="bet-button text-uppercase">
+            Сделать ставку
+          </button>
         </div>
       </section>
 
@@ -156,20 +154,20 @@
 
     <footer class="footer">
       <address class="footer-address">
-        <a class="adress__link" href="tel:+9995555555">+9 999 555 5555</a><br />
-        <a class="adress__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a
+        <a class="footer-adress__link" href="tel:+9995555555">+9 999 555 5555</a
         ><br />
-        <p class="header__address">
+        <a class="footer-adress__link" href="mailto:info@sobaka.ge"
+          >info@sobaka.ge</a
+        ><br />
+        <p class="footer__adress-no_under">
           наб. Принсенграхт 263-265,<br />
           Амстердам
         </p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
-          <li class="footer__menu-list-item">
-            <a class="footer__menu-link footer__menu-link_active" href="#0"
-              >главная</a
-            >
+          <li class="footer__menu-list-item footer__menu-link_active">
+            <a class="footer__menu-link" href="#0">главная</a>
           </li>
           <li class="footer__menu-list-item">
             <a class="footer__menu-link" href="#lots">посмотреть лоты</a>
@@ -181,17 +179,25 @@
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="youtube.com">
+          <a
+            class="footer__social-link"
+            href="https://www.youtube.com/"
+            target="_blank"
+          >
             <img class="footer__social-icon" src="./images/yt.svg" alt="ютуб" />
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="vk.com">
+          <a class="footer__social-link" href="https://vk.com/" target="_blank">
             <img class="footer__social-icon" src="./images/vk.svg" alt="вк" />
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="pinterest.com">
+          <a
+            class="footer__social-link"
+            href="https://pinterest.com/"
+            target="_blank"
+          >
             <img
               class="footer__social-icon"
               src="./images/pinterest.svg"
