--- a/index.html
+++ b/index.html
@@ -155,13 +155,12 @@
     <footer class="footer">
       <address class="footer-address">
         <a class="footer-adress__link" href="tel:+9995555555">+9 999 555 5555</a
-        ><br />
+        >
         <a class="footer-adress__link" href="mailto:info@sobaka.ge"
           >info@sobaka.ge</a
-        ><br />
+        >
         <p class="footer__adress-no_under">
-          наб. Принсенграхт 263-265,<br />
-          Амстердам
+          наб. Принсенграхт 263-265, Амстердам
         </p>
       </address>
       <nav class="footer__menu">
@@ -184,12 +183,23 @@
             href="https://www.youtube.com/"
             target="_blank"
           >
-            <img class="footer__social-icon" src="./images/yt.svg" alt="ютуб" />
+            <img 
+              class="footer__social-icon" 
+              src="./images/yt.svg" 
+              alt="ютуб" 
+            />
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="https://vk.com/" target="_blank">
-            <img class="footer__social-icon" src="./images/vk.svg" alt="вк" />
+          <a 
+            class="footer__social-link" 
+            href="https://vk.com/" 
+            target="_blank">
+            <img 
+              class="footer__social-icon" 
+              src="./images/vk.svg" 
+              alt="вк" 
+            />
           </a>
         </li>
         <li class="footer__social-list-item">
